opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/happy-eyeballs"
dev-repo: "git+https://github.com/robur-coop/happy-eyeballs.git"
bug-reports: "https://github.com/robur-coop/happy-eyeballs/issues"
doc: "https://robur-coop.github.io/happy-eyeballs/"
license: "ISC"

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "happy-eyeballs" {=version}
  "cmdliner" {>= "1.1.0"}
  "duration"
  "dns-client-lwt" {>= "7.0.0"}
  "domain-name"
  "ipaddr"
  "fmt"
  "logs"
  "lwt"
  "mtime" {>= "1.0.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]

synopsis: "Connecting to a remote host via IP version 4 or 6 using Lwt_unix"
description: """
Happy eyeballs is an implementation of RFC 8305 which specifies how to connect
to a remote host using either IP protocol version 4 or IP protocol version 6.
This uses Lwt and Lwt_unix for side effects.
"""
