opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/miou-toolkit"
dev-repo: "git+https://github.com/robur-coop/miou-toolkit.git"
bug-reports: "https://github.com/robur-coop/miou-toolkit/issues"
doc: "https://robur-coop.github.io/miou-toolkit/"
license: "ISC"

depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "2.0.0"}
  "happy-eyeballs" {= version}
  "miou" {>= "0.2.0"}
  "mtime" {>= "2.0.0"}
  "duration"
  "domain-name"
  "ipaddr"
  "fmt"
  "logs"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]

synopsis: "Connecting to a remote host via IP version 4 or 6 using Miou"
description: """
Happy eyeballs is an implementation of RFC 8305 which specifies how to connect
to a remote host using either IP protocol version 4 or IP protocol version 6.
This uses Miou for side effects.
"""
