opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/miou-toolkit"
dev-repo: "git+https://github.com/robur-coop/miou-toolkit.git"
bug-reports: "https://github.com/robur-coop/miou-toolkit/issues"
doc: "https://robur-coop.github.io/miou-toolkit/"
license: "ISC"

depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "2.0.0"}
  "happy-eyeballs" {= version}
  "miou" {>= "0.1.0"}
  "tls-miou"
  "duration"
  "dns" {>= "7.0.0"}
  "dns-client" {>= "7.0.0"}
  "domain-name"
  "ipaddr"
  "fmt"
  "logs"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]

synopsis: "Connecting to a remote host via IP version 4 or 6 using Miou"
description: """
Happy eyeballs is an implementation of RFC 8305 which specifies how to connect
to a remote host using either IP protocol version 4 or IP protocol version 6.
This uses Miou for side effects.
"""

pin-depends: [
  [ "miou.dev" "git+https://github.com/robur-coop/miou.git#9e14c3996326c28c3611b06f3cd758477fba4a1b" ]
  [ "tls-miou.0.17.4" "git+https://github.com/dinosaure/ocaml-tls.git#c59f2fe51ccc6bd60a24b88077e655038f9321fe" ]
]
