(executable
 (name test)
 (public_name happy_eyeballs_client)
 (modules test)
 (package happy-eyeballs-lwt)
 (libraries logs.fmt fmt.cli logs.cli fmt.tty cmdliner happy_eyeballs_lwt))

(executable
 (name connect)
 (public_name happy-eyeballs-miou-unix.connect)
 (modules connect)
 (package happy-eyeballs-miou-unix)
 (libraries cmdliner logs.fmt fmt.cli logs.cli logs.threaded fmt.tty happy-eyeballs-miou-unix))
